apps/portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - srv836417.hstgr.cloud
    secretName: portfolio-tls
  rules:
    - host: srv836417.hstgr.cloud
      http:
        paths:
         - path: /.well-known/acme-challenge/
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
